[Breaking Change] Support cross-thread trace profiling. (#10575)
The data structure and query APIs are changed.